--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -10,6 +10,9 @@
         <item android:id="@+id/nav_photo_albums"
             android:icon="@drawable/ic_photo_albums_black_24dp"
             android:title="Albums" />
+        <item android:id="@+id/nav_camera"
+            android:icon="@drawable/ic_photo_albums_black_24dp"
+            android:title="Camera" />
     </group>
 
 </menu>
