--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -63,25 +63,17 @@
         android:id="@+id/search_toDateLabel" />
 
     <Button
-        android:text="Cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/search_toDate"
-        android:layout_alignEnd="@+id/search_toDate"
-        android:layout_marginRight="55dp"
-        android:layout_marginEnd="55dp"
-        android:id="@+id/search_cancel"
-        android:onClick="cancel" />
-
-     <Button
-        android:text="Search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/search_toDateLabel"
-        android:layout_toEndOf="@+id/search_toDateLabel"
         android:id="@+id/search_search"
-        android:onClick="search" />
+        android:layout_width="139dp"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginBottom="96dp"
+        android:layout_toEndOf="@+id/search_toDateLabel"
+        android:layout_toRightOf="@+id/search_toDateLabel"
+        android:onClick="search"
+        android:text="Search" />
 
 </RelativeLayout>
