Changed the size of image view and remained file

--- a/app/src/main/res/layout/view_img.xml
+++ b/app/src/main/res/layout/view_img.xml
@@ -11,42 +11,50 @@
 
     <ImageView
         android:id="@+id/ivMain"
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:src="@mipmap/ic_launcher"
+        android:layout_width="270dp"
+        android:layout_height="639dp"
+        android:layout_alignParentStart="true"
 
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="66dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginRight="75dp"
+        android:layout_marginBottom="41dp"
         android:adjustViewBounds="true"
         android:maxWidth="42dp"
         android:maxHeight="42dp"
         android:scaleType="fitXY"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:src="@mipmap/ic_launcher" />
 
     <Button
         android:id="@+id/buttonLeft"
-        android:layout_width="wrap_content"
+        android:layout_width="54dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/buttonRight"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginBottom="281dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginBottom="280dp"
         android:text="left" />
 
     <Button
         android:id="@+id/buttonRight"
-        android:layout_width="wrap_content"
+        android:layout_width="65dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginRight="3dp"
         android:layout_marginBottom="280dp"
         android:text="right" />
 </RelativeLayout>
