--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright"
+    android:background="#121313"
     tools:context=".AlbumsFragment">
 
     <ImageView
         android:id="@+id/ivMain"
-        android:layout_width="270dp"
-        android:layout_height="639dp"
+        android:layout_width="390dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
 
         android:layout_alignParentLeft="true"
@@ -19,41 +19,41 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="71dp"
-        android:layout_marginLeft="71dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginTop="42dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginRight="9dp"
+        android:layout_marginBottom="124dp"
         android:adjustViewBounds="true"
         android:maxWidth="42dp"
         android:maxHeight="42dp"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY" />
 
     <Button
         android:id="@+id/buttonLeft"
-        android:layout_width="65dp"
-        android:layout_height="wrap_content"
+        android:layout_width="128dp"
+        android:layout_height="59dp"
         android:layout_alignBaseline="@id/buttonRight"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginBottom="280dp"
-        android:text="L" />
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginBottom="33dp"
+        android:text="Left" />
 
     <Button
         android:id="@+id/buttonRight"
-        android:layout_width="65dp"
+        android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="3dp"
-        android:layout_marginRight="3dp"
-        android:layout_marginBottom="280dp"
-        android:text="R" />
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
+        android:layout_marginBottom="33dp"
+        android:text="Right" />
 
 
 </RelativeLayout>
